--- a/audio/Cargo.toml
+++ b/audio/Cargo.toml
@@ -14,8 +14,9 @@ euclid = "0.20"
 serde_derive = "1.0.66"
 serde = "1.0.66"
 servo_media_derive = { path = "../servo-media-derive" }
-smallvec = "0.6.1"
+servo-media-player = { path = "../player" }
 servo-media-traits = { path = "../traits" }
+smallvec = "0.6.1"
 
 [dependencies.petgraph]
 version = "0.4.12"
