--- a/audio/Cargo.toml
+++ b/audio/Cargo.toml
@@ -11,6 +11,7 @@ path = "lib.rs"
 [dependencies]
 boxfnonce = "0.1"
 euclid = "0.20"
+log = "0.4"
 serde_derive = "1.0.66"
 serde = "1.0.66"
 servo_media_derive = { path = "../servo-media-derive" }
@@ -18,6 +19,7 @@ servo-media-player = { path = "../player" }
 servo-media-traits = { path = "../traits" }
 smallvec = "0.6.1"
 speexdsp-resampler = "0.1.0"
+num-complex = "0.2.4"
 
 [dependencies.petgraph]
 version = "0.4.12"
