--- a/audio/Cargo.toml
+++ b/audio/Cargo.toml
@@ -17,6 +17,7 @@ serde = "1.0.66"
 servo_media_derive = { path = "../servo-media-derive" }
 servo-media-player = { path = "../player" }
 servo-media-traits = { path = "../traits" }
+servo-media-streams = { path = "../streams" }
 smallvec = "0.6.1"
 speexdsp-resampler = "0.1.0"
 num-complex = "0.2.4"
