--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -96,6 +96,11 @@ name = "play_media_stream"
 path = "play_media_stream.rs"
 required-features = [ "player" ]
 
+
+[[bin]]
+name = "stream_dest_node"
+path = "stream_dest_node.rs"
+
 [[bin]]
 name = "simple_player"
 path = "simple_player.rs"
