--- a/webrtc/Cargo.toml
+++ b/webrtc/Cargo.toml
@@ -8,6 +8,7 @@ path = "lib.rs"
 
 [dependencies]
 boxfnonce = "0.1.0"
+lazy_static = "1.0"
 log = "0.4.6"
 uuid = { version = "0.8", features = ["v4"] }
 
