--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -15,6 +15,7 @@ serde_derive = { version = "1.0", optional = true }
 serde_json = { version = "1.0", optional = true }
 servo-media-dummy = { path = "../backends/dummy" }
 servo-media-auto = { path = "../backends/auto" }
+servo-media-gstreamer = { path = "../backends/gstreamer" }
 servo-media = { path = "../servo-media" }
 webrender = { version = "0.60.0", optional = true }
 webrender_api = { version = "0.60.0", optional = true }
