--- a/streams/Cargo.toml
+++ b/streams/Cargo.toml
@@ -11,4 +11,4 @@ path = "lib.rs"
 [dependencies]
 lazy_static = "1.0"
 serde = "1.0.66"
-uuid = { version = "0.8", features = ["v4"] }
+uuid = { version = "0.8", features = ["v4", "serde"] }
