--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -19,9 +19,30 @@ jobs:
     - name: Install deps on linux
       if: startsWith(matrix.os, 'ubuntu')
       run: |
-        sudo bash -c 'echo "deb https://mirrors.kernel.org/ubuntu bionic main" >>/etc/apt/sources.list'
+        sudo bash -c 'apt-add-repository -y https://mirrors.kernel.org/ubuntu'
         sudo apt update
-        sudo apt install libasound2-plugins libfaad2 libfftw3-single3 libjack-jackd2-0 libmms0 libmpg123-0 libopus0 liborc-0.4-0 libpulsedsp libsamplerate0 libspeexdsp1 libtdb1 libtheora0 libtwolame0 libwayland-egl1-mesa webp libwebrtc-audio-processing1 liborc-0.4-dev pulseaudio pulseaudio-utils libffi6 -y
+        sudo apt install -y \
+          libasound2-plugins \
+          libfaad2 \
+          libffi6
+          libfftw3-single3 \
+          libjack-jackd2-0 \
+          libmms0 \
+          libmpg123-0 \
+          libopus0 \
+          liborc-0.4-0 \
+          liborc-0.4-dev \
+          libpulsedsp \
+          libsamplerate0 \
+          libspeexdsp1 \
+          libtdb1 \
+          libtheora0 \
+          libtwolame0 \
+          libwayland-egl1-mesa \
+          libwebrtc-audio-processing1 \
+          pulseaudio \
+          pulseaudio-utils \
+          webp \
     - name: Setup environment
       run: |
         curl -L https://servo-deps-2.s3.amazonaws.com/gstreamer/gstreamer-1.16-x86_64-linux-gnu.20190515.tar.gz | tar xz
