--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,10 +20,10 @@ cache:
 
 install:
   - appveyor-retry choco install pkgconfiglite
-  - appveyor-retry appveyor DownloadFile https://gstreamer.freedesktop.org/data/pkg/windows/1.16.0/gstreamer-1.0-devel-msvc-x86_64-1.16.0.msi
-  - appveyor-retry appveyor DownloadFile https://gstreamer.freedesktop.org/data/pkg/windows/1.16.0/gstreamer-1.0-msvc-x86_64-1.16.0.msi
-  - msiexec /i gstreamer-1.0-devel-msvc-x86_64-1.16.0.msi /quiet /qn /norestart /log install-devel.log ADDLOCAL=ALL
-  - msiexec /i gstreamer-1.0-msvc-x86_64-1.16.0.msi /quiet /qn /norestart /log install.log ADDLOCAL=ALL
+  - appveyor-retry appveyor DownloadFile https://gstreamer.freedesktop.org/data/pkg/windows/1.22.2/msvc/gstreamer-1.0-devel-msvc-x86_64-1.22.2.msi
+  - appveyor-retry appveyor DownloadFile https://gstreamer.freedesktop.org/data/pkg/windows/1.22.2/msvc/gstreamer-1.0-msvc-x86_64-1.22.2.msi
+  - msiexec /i gstreamer-1.0-devel-msvc-x86_64-1.22.2.msi /quiet /qn /norestart /log install-devel.log ADDLOCAL=ALL
+  - msiexec /i gstreamer-1.0-msvc-x86_64-1.22.2.msi /quiet /qn /norestart /log install.log ADDLOCAL=ALL
   - call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvars64.bat"
   - appveyor-retry appveyor DownloadFile https://win.rustup.rs/ -FileName rustup-init.exe
   - rustup-init.exe -y --default-host x86_64-pc-windows-msvc --default-toolchain nightly
