--- a/backends/gstreamer/Cargo.toml
+++ b/backends/gstreamer/Cargo.toml
@@ -2,6 +2,7 @@
 name = "servo-media-gstreamer"
 version = "0.1.0"
 authors = ["The Servo Project Developers"]
+edition = "2021"
 
 [lib]
 name = "servo_media_gstreamer"
@@ -10,17 +11,17 @@ path = "lib.rs"
 [dependencies]
 boxfnonce = "0.1.0"
 byte-slice-cast = "0.2"
-glib = "0.9"
-glib-sys = "0.9"
-gstreamer = "0.15"
-gstreamer-app = "0.15"
-gstreamer-audio = "0.15"
-gstreamer-base = "0.15"
-gstreamer-sys = "0.8"
-gstreamer-player = "0.15"
-gstreamer-sdp = "0.15"
-gstreamer-video = "0.15"
-gstreamer-webrtc = { version = "0.15", features = ["v1_16"] }
+glib = "0.17"
+glib-sys = "0.17"
+gstreamer = "0.20"
+gstreamer-app = "0.20"
+gstreamer-audio = "0.20"
+gstreamer-base = "0.20"
+gstreamer-sys = "0.20"
+gstreamer-player = "0.20"
+gstreamer-sdp = "0.20"
+gstreamer-video = "0.20"
+gstreamer-webrtc = { version = "0.20", features = ["v1_18"] }
 ipc-channel = { workspace = true }
 lazy_static = "1.2.0"
 log = "0.4"
