Try to reenable the examples in the CI
Hopefully upgrading WebRender to the same version as Servo here will fix
the problems with the examples.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,7 @@ members = [
   "webrtc"
 ]
 
+[patch."https://github.com/servo/webrender"]
+webrender = { git = "https://github.com/jdm/webrender", branch = "crash-backtrace" }
+webrender_api = { git = "https://github.com/jdm/webrender", branch = "crash-backtrace" }
+
