--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -73,6 +73,9 @@ jobs:
         gst-inspect-1.0 | grep Total
     - name: Build
       run: cargo build
+    - name: Examples
+      run: |
+        ls examples/*.rs | xargs -I{} basename  {} .rs  | grep -v params_connect | RUST_BACKTRACE=1 GST_DEBUG=3 xargs -I{} cargo ex {} --all-features
 
   build_result:
     name: Result
