--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "examples"
-version = "0.1.0"
+version = "0.2.0"
 license = "MPL-2.0"
 
 [dependencies]
-euclid = { version = "0.19.0", optional = true }
+euclid = { version = "0.22", optional = true }
 failure = { version = "0.1", optional = true }
 failure_derive = { version = "0.1", optional = true }
-gleam = { version = "0.6.8", optional = true }
+gleam = { version = "0.12.2", optional = true }
 rand = { version = "0.5.0", optional = true }
 time = { version = "0.1.40", optional = true }
 serde = {version = "1.0", optional = true }
@@ -17,8 +17,8 @@ servo-media-dummy = { path = "../backends/dummy" }
 servo-media-auto = { path = "../backends/auto" }
 servo-media-gstreamer = { path = "../backends/gstreamer" }
 servo-media = { path = "../servo-media" }
-webrender = { version = "0.60.0", optional = true }
-webrender_api = { version = "0.60.0", optional = true }
+webrender = { git = "https://github.com/servo/webrender", optional = true }
+webrender_api = { git = "https://github.com/servo/webrender", optional = true }
 websocket = { version = "0.22", optional = true }
 ipc-channel = { version = "0.16", optional = true }
 
