--- a/backends/gstreamer/render-unix/Cargo.toml
+++ b/backends/gstreamer/render-unix/Cargo.toml
@@ -13,37 +13,13 @@ gl-wayland = ["gstreamer-gl-wayland"]
 name = "servo_media_gstreamer_render_unix"
 path = "lib.rs"
 
-[dependencies.glib]
-version = "0.17"
-
-[dependencies.gst]
-package = "gstreamer"
-version = "0.20"
-
-[dependencies.gst-gl]
-package = "gstreamer-gl"
-version = "0.20"
-
-[dependencies.gstreamer-gl-egl]
-version = "0.20"
-optional = true
-
-[dependencies.gstreamer-gl-x11]
-version = "0.20"
-optional = true
-
-[dependencies.gstreamer-gl-wayland]
-version = "0.20"
-optional = true
-
-[dependencies.gst-video]
-package = "gstreamer-video"
-version = "0.20"
-
-[dependencies.sm-player]
-package = "servo-media-player"
-path = "../../../player"
-
-[dependencies.sm-gst-render]
-package = "servo-media-gstreamer-render"
-path = "../render"
+[dependencies]
+glib = "0.18"
+gst = { package = "gstreamer", version = "0.21" }
+gst-gl = { package = "gstreamer-gl", version = "0.21" }
+gstreamer-gl-egl = { version = "0.21", optional = true }
+gstreamer-gl-x11 = { version = "0.21", optional = true }
+gstreamer-gl-wayland = { version = "0.21", optional = true }
+gst-video = { package = "gstreamer-video", version = "0.21" }
+sm-player = { package = "servo-media-player", path = "../../../player" }
+sm-gst-render = { package = "servo-media-gstreamer-render", path = "../render" }
