--- a/backends/gstreamer/render/Cargo.toml
+++ b/backends/gstreamer/render/Cargo.toml
@@ -7,13 +7,9 @@ authors = ["The Servo Project Developers"]
 name = "servo_media_gstreamer_render"
 path = "lib.rs"
 
-[dependencies.gst]
-package = "gstreamer"
-version = "0.20"
-
-[dependencies.gst-video]
-package = "gstreamer-video"
-version = "0.20"
+[dependencies]
+gst = { package = "gstreamer", version = "0.21" }
+gst-video = { package = "gstreamer-video", version = "0.21" }
 
 [dependencies.sm-player]
 package = "servo-media-player"
