--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -10,7 +10,6 @@ on:
 
 env:
   CARGO_TERM_COLOR: always
-  GST_PLUGIN_FEATURE_RANK: pulsesink:NONE,alsasink:NONE,jacksink:NONE,fakesink:MAX
 
 jobs:
   Build:
@@ -61,6 +60,10 @@ jobs:
           pulseaudio \
           pulseaudio-utils \
           webp
+    - name: Start virtual audio device
+      if: startsWith(matrix.os, 'ubuntu')
+      run: |
+        jackd -d dummy &
     - name: Install rust
       uses: actions-rs/toolchain@v1
       with:
