--- a/backends/gstreamer/render-unix/Cargo.toml
+++ b/backends/gstreamer/render-unix/Cargo.toml
@@ -2,30 +2,24 @@
 name = "servo-media-gstreamer-render-unix"
 version = "0.1.0"
 authors = ["The Servo Project Developers"]
+edition = "2021"
 
 [features]
-gl-egl = ["gstreamer-gl/egl"]
-gl-x11 = ["gstreamer-gl/x11"]
-gl-wayland = ["gstreamer-gl/wayland"]
+gl-egl = ["gstreamer-gl-egl"]
+gl-x11 = ["gstreamer-gl-x11"]
+gl-wayland = ["gstreamer-gl-wayland"]
 
 [lib]
 name = "servo_media_gstreamer_render_unix"
 path = "lib.rs"
 
-[dependencies.glib]
-version = "0.9"
-
-[dependencies.gstreamer]
-version = "0.15"
-
-[dependencies.gstreamer-gl]
-version = "0.15"
-
-[dependencies.gstreamer-video]
-version = "0.15"
-
-[dependencies.servo-media-player]
-path = "../../../player"
-
-[dependencies.servo-media-gstreamer-render]
-path = "../render"
+[dependencies]
+glib = "0.18"
+gst = { package = "gstreamer", version = "0.21" }
+gst-gl = { package = "gstreamer-gl", version = "0.21" }
+gstreamer-gl-egl = { version = "0.21", optional = true }
+gstreamer-gl-x11 = { version = "0.21", optional = true }
+gstreamer-gl-wayland = { version = "0.21", optional = true }
+gst-video = { package = "gstreamer-video", version = "0.21" }
+sm-player = { package = "servo-media-player", path = "../../../player" }
+sm-gst-render = { package = "servo-media-gstreamer-render", path = "../render" }
