--- a/backends/gstreamer/render-unix/Cargo.toml
+++ b/backends/gstreamer/render-unix/Cargo.toml
@@ -15,11 +15,11 @@ path = "lib.rs"
 
 [dependencies]
 glib = "0.18"
-gst = { package = "gstreamer", version = "0.21" }
-gst-gl = { package = "gstreamer-gl", version = "0.21" }
-gstreamer-gl-egl = { version = "0.21", optional = true }
-gstreamer-gl-x11 = { version = "0.21", optional = true }
-gstreamer-gl-wayland = { version = "0.21", optional = true }
+gst = { workspace = true }
+gst-gl = { workspace = true }
+gstreamer-gl-egl = { workspace = true, optional = true }
+gstreamer-gl-x11 = { workspace = true, optional = true }
+gstreamer-gl-wayland = { workspace = true, optional = true }
 gst-video = { package = "gstreamer-video", version = "0.21" }
 sm-player = { package = "servo-media-player", path = "../../../player" }
 sm-gst-render = { package = "servo-media-gstreamer-render", path = "../render" }
