--- a/backends/gstreamer/render/Cargo.toml
+++ b/backends/gstreamer/render/Cargo.toml
@@ -8,8 +8,8 @@ name = "servo_media_gstreamer_render"
 path = "lib.rs"
 
 [dependencies]
-gst = { package = "gstreamer", version = "0.21" }
-gst-video = { package = "gstreamer-video", version = "0.21" }
+gst = { workspace = true }
+gst-video = { workspace = true }
 
 [dependencies.sm-player]
 package = "servo-media-player"
