--- a/backends/dummy/Cargo.toml
+++ b/backends/dummy/Cargo.toml
@@ -2,6 +2,7 @@
 name = "servo-media-dummy"
 version = "0.1.0"
 authors = ["The Servo Project Developers"]
+license = "MPL-2.0"
 
 [lib]
 name = "servo_media_dummy"
