--- a/backends/gstreamer/Cargo.toml
+++ b/backends/gstreamer/Cargo.toml
@@ -3,6 +3,7 @@ name = "servo-media-gstreamer"
 version = "0.1.0"
 authors = ["The Servo Project Developers"]
 edition = "2021"
+license = "MPL-2.0"
 
 [lib]
 name = "servo_media_gstreamer"
