--- a/examples/android/lib/Cargo.toml
+++ b/examples/android/lib/Cargo.toml
@@ -3,6 +3,7 @@ name = "servo_media_android"
 description = "Android lib to use Servo Media from Android Java"
 version = "0.1.0"
 authors = ["Fernando Jiménez Moreno <ferjmoreno@gmail.com>"]
+license = "MPL-2.0"
 
 [lib]
 crate-type = ["cdylib"]
