--- a/servo-media/Cargo.toml
+++ b/servo-media/Cargo.toml
@@ -2,6 +2,7 @@
 name = "servo-media"
 version = "0.1.0"
 authors = ["Manish Goregaokar <manishsmail@gmail.com>"]
+license = "MPL-2.0"
 
 [lib]
 name = "servo_media"
