--- a/audio/Cargo.toml
+++ b/audio/Cargo.toml
@@ -3,6 +3,7 @@ authors = ["Fernando Jiménez Moreno <ferjmoreno@gmail.com>"]
 license = "MPL-2.0"
 name = "servo-media-audio"
 version = "0.2.0"
+edition = "2021"
 
 [lib]
 name = "servo_media_audio"
