--- a/servo-media-derive/Cargo.toml
+++ b/servo-media-derive/Cargo.toml
@@ -3,6 +3,7 @@ name = "servo-media-derive"
 version = "0.1.0"
 authors = ["Fernando Jiménez Moreno <ferjmoreno@gmail.com>"]
 license = "MPL-2.0"
+edition = "2021"
 
 [lib]
 name = "servo_media_derive"
