Port remaining crates to 2021 edition
This is done in one commit, as the only
change required was in the relevant
Cargo.tomls

Signed-off-by: Simon Wülker <simon.wuelker@arcor.de>

--- a/examples/android/lib/Cargo.toml
+++ b/examples/android/lib/Cargo.toml
@@ -4,6 +4,7 @@ description = "Android lib to use Servo Media from Android Java"
 version = "0.1.0"
 authors = ["Fernando Jiménez Moreno <ferjmoreno@gmail.com>"]
 license = "MPL-2.0"
+edition = "2021"
 
 [lib]
 crate-type = ["cdylib"]
