--- a/backends/dummy/Cargo.toml
+++ b/backends/dummy/Cargo.toml
@@ -3,6 +3,7 @@ name = "servo-media-dummy"
 version = "0.1.0"
 authors = ["The Servo Project Developers"]
 license = "MPL-2.0"
+edition = "2021"
 
 [lib]
 name = "servo_media_dummy"
