--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -2,6 +2,7 @@
 name = "examples"
 version = "0.2.0"
 license = "MPL-2.0"
+edition = "2021"
 
 [dependencies]
 euclid = { version = "0.22", optional = true }
