--- a/servo-media/Cargo.toml
+++ b/servo-media/Cargo.toml
@@ -3,6 +3,7 @@ name = "servo-media"
 version = "0.1.0"
 authors = ["Manish Goregaokar <manishsmail@gmail.com>"]
 license = "MPL-2.0"
+edition = "2021"
 
 [lib]
 name = "servo_media"
