--- a/webrtc/Cargo.toml
+++ b/webrtc/Cargo.toml
@@ -3,6 +3,7 @@ name = "servo-media-webrtc"
 version = "0.1.0"
 authors = ["Josh Matthews <josh@joshmatthews.net>"]
 license = "MPL-2.0"
+edition = "2021"
 
 [lib]
 path = "lib.rs"
