Update CI with stable rust
LazyLock has been stable. We should be able to use stable in CI/CD

Signed-off-by: Wu Yuwei <yuweiwu@pm.me>

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,7 +18,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-22.04]
-        rust: [nightly]
+        rust: [stable]
         target: ["default"]
     steps:
     - uses: actions/checkout@v2
