--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,7 @@ gstreamer-gl-egl = { version = "0.23" }
 gstreamer-gl-wayland = { version = "0.23" }
 gstreamer-gl-x11 = { version = "0.23" }
 gstreamer-sys = "0.23"
-ipc-channel = { git = "https://github.com/wusyong/ipc-channel", branch = "0.20.0" }
+ipc-channel = "0.20"
 
 [patch."https://github.com/servo/webrender"]
 webrender = { git = "https://github.com/jdm/webrender", branch = "crash-backtrace" }
