--- a/backends/gstreamer/Cargo.toml
+++ b/backends/gstreamer/Cargo.toml
@@ -18,6 +18,7 @@ gst-app = { workspace = true }
 gst-audio = { workspace = true }
 gst-video = { workspace = true }
 gst-base = { workspace = true }
+gst-mse = { workspace = true }
 gst-play = { workspace = true }
 gst-webrtc = { workspace = true }
 gst-sdp = { workspace = true }
@@ -29,6 +30,7 @@ once_cell = "1.18.0"
 servo-media = { path = "../../servo-media" }
 servo-media-audio = { path = "../../audio" }
 servo-media-gstreamer-render = { path = "render" }
+servo-media-mse = { path = "../../mse" }
 servo-media-player = { path = "../../player" }
 servo-media-streams = { path = "../../streams" }
 servo-media-traits = { path = "../../traits" }
