--- a/servo-media/Cargo.toml
+++ b/servo-media/Cargo.toml
@@ -15,6 +15,9 @@ once_cell = "1.18.0"
 [dependencies.servo-media-audio]
 path = "../audio"
 
+[dependencies.servo-media-mse]
+path = "../mse"
+
 [dependencies.servo-media-player]
 path = "../player"
 
