--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -5,10 +5,9 @@ license = "MPL-2.0"
 edition = "2021"
 
 [dependencies]
-env_logger = "*"
+anyhow = { version = "1", optional = true }
+env_logger = "0.11"
 euclid = { version = "0.22", optional = true }
-failure = { version = "0.1", optional = true }
-failure_derive = { version = "0.1", optional = true }
 gleam = { version = "0.12.2", optional = true }
 rand = { version = "0.9.0", optional = true }
 time = { version = "0.1.40", optional = true }
@@ -19,6 +18,7 @@ servo-media-dummy = { path = "../backends/dummy" }
 servo-media-auto = { path = "../backends/auto" }
 servo-media-gstreamer = { path = "../backends/gstreamer" }
 servo-media = { path = "../servo-media" }
+thiserror = { version = "2", optional = true }
 webrender = { git = "https://github.com/servo/webrender", optional = true }
 webrender_api = { git = "https://github.com/servo/webrender", optional = true }
 websocket = { version = "0.27", optional = true }
@@ -32,12 +32,12 @@ clap = { version = "2.33", default-features = false, optional = true }
 [features]
 default = []
 gui = [
+  "anyhow",
   "euclid",
   "clap",
-  "failure",
-  "failure_derive",
   "gleam",
   "glutin",
+  "thiserror",
   "webrender",
   "webrender_api",
   "winit",
