--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -80,7 +80,7 @@ jobs:
     - name: Examples
       run: |
         ls examples/*.rs | xargs -I{} basename  {} .rs  | grep -v params_connect | RUST_BACKTRACE=1 GST_DEBUG=3 xargs -I{} cargo ex {} --all-features
-        find examples -type d -maxdepth 1 -mindepth 1 | xargs -I{} basename {} | grep -Fv -e resources -e android | RUST_BACKTRACE=1 GST_DEBUG=3 xargs -I{} cargo ex {} --all-features
+        find examples -type d -maxdepth 1 -mindepth 1 | xargs -I{} basename {} | grep -Fv -e resources -e android | RUST_BACKTRACE=1 GST_DEBUG=3 xargs -I{} cargo build -p examples --bin {} --all-features
 
   build_result:
     name: Result
