--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-22.04]
+        os: [ubuntu-latest]
         rust: [stable]
         target: ["default"]
     steps:
@@ -36,7 +36,7 @@ jobs:
           gstreamer1.0-tools \
           libasound2-plugins \
           libfaad2 \
-          libffi7 \
+          libffi8 \
           libfftw3-single3 \
           libges-1.0-dev \
           libgstreamer-plugins-bad1.0-dev\
@@ -49,7 +49,6 @@ jobs:
           libopus0 \
           liborc-0.4-0 \
           liborc-0.4-dev \
-          libpulsedsp \
           libsamplerate0 \
           libspeexdsp1 \
           libtdb1 \
