--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -5,9 +5,9 @@ license = "MPL-2.0"
 edition = "2021"
 
 [dependencies]
+anyhow = { version = "1", optional = true }
+env_logger = "0.11"
 euclid = { version = "0.22", optional = true }
-failure = { version = "0.1", optional = true }
-failure_derive = { version = "0.1", optional = true }
 gleam = { version = "0.12.2", optional = true }
 rand = { version = "0.9.0", optional = true }
 time = { version = "0.1.40", optional = true }
@@ -18,25 +18,26 @@ servo-media-dummy = { path = "../backends/dummy" }
 servo-media-auto = { path = "../backends/auto" }
 servo-media-gstreamer = { path = "../backends/gstreamer" }
 servo-media = { path = "../servo-media" }
+thiserror = { version = "2", optional = true }
 webrender = { git = "https://github.com/servo/webrender", optional = true }
 webrender_api = { git = "https://github.com/servo/webrender", optional = true }
-websocket = { version = "0.22", optional = true }
+websocket = { version = "0.27", optional = true }
 ipc-channel = { workspace = true, optional = true }
 
 [target.'cfg(not(target_os = "android"))'.dependencies]
-winit = { version = "0.19", optional = true }
-glutin = { version = "0.21", optional = true }
+winit = { version = "0.26", optional = true }
+glutin = { version = "0.26", optional = true }
 clap = { version = "2.33", default-features = false, optional = true }
 
 [features]
 default = []
 gui = [
+  "anyhow",
   "euclid",
   "clap",
-  "failure",
-  "failure_derive",
   "gleam",
   "glutin",
+  "thiserror",
   "webrender",
   "webrender_api",
   "winit",
