--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ gstreamer-gl-wayland = { version = "0.24" }
 gstreamer-gl-x11 = { version = "0.24" }
 gstreamer-sys = "0.24"
 ipc-channel = "0.20"
+parking_lot = "0.12"
 
 [patch."https://github.com/servo/webrender"]
 webrender = { git = "https://github.com/jdm/webrender", branch = "crash-backtrace" }
