--- a/backends/dummy/Cargo.toml
+++ b/backends/dummy/Cargo.toml
@@ -11,6 +11,7 @@ path = "lib.rs"
 
 [dependencies]
 ipc-channel = { workspace = true }
+parking_lot = { workspace = true }
 servo-media = { path = "../../servo-media" }
 servo-media-audio = { path = "../../audio" }
 servo-media-player = { path = "../../player" }
