--- a/backends/gstreamer/render-android/Cargo.toml
+++ b/backends/gstreamer/render-android/Cargo.toml
@@ -15,5 +15,6 @@ gst = { workspace = true }
 gst-gl = { workspace = true }
 gstreamer-gl-egl = { workspace = true }
 gst-video = { workspace = true }
+parking_lot = { workspace = true }
 sm-player = { package = "servo-media-player", path = "../../../player" }
 sm-gst-render = { package = "servo-media-gstreamer-render", path = "../render" }
