--- a/servo-media/Cargo.toml
+++ b/servo-media/Cargo.toml
@@ -11,7 +11,7 @@ path = "lib.rs"
 
 [dependencies]
 once_cell = "1.18.0"
-
+parking_lot = { workspace = true }
 [dependencies.servo-media-audio]
 path = "../audio"
 
