implement can_play_type on ohos backend, fix player interface
Signed-off-by: rayguo17 <rayguo17@gmail.com>

--- a/backends/ohos/Cargo.toml
+++ b/backends/ohos/Cargo.toml
@@ -16,5 +16,7 @@ servo-media-player = { path = "../../player" }
 servo-media-streams = { path = "../../streams" }
 servo-media-traits = { path = "../../traits" }
 servo-media-webrtc = { path = "../../webrtc" }
+mime = "0.3.13"
+once_cell = "1.18.0"
 log = "0.4"
-ohos-media-sys = { version = "0.0.4" ,features = ["api-13"] }
+ohos-media-sys = { version = "0.0.5" ,features = ["api-21"] }
