--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,8 @@ gstreamer-gl-egl = { version = "0.24" }
 gstreamer-gl-wayland = { version = "0.24" }
 gstreamer-gl-x11 = { version = "0.24" }
 gstreamer-sys = "0.24"
-ipc-channel = "0.21"
+# temporary git revision till merged
+ipc-channel = { version = "0.21"}
 
 [patch."https://github.com/servo/webrender"]
 webrender = { git = "https://github.com/jdm/webrender", branch = "crash-backtrace" }
